[gd_scene load_steps=2 format=3 uid="uid://bmlh5motvbba2"]

[ext_resource type="Script" uid="uid://dhvs8mpanuwhs" path="res://Scripts/Battle/BattleManager.gd" id="1_12f34"]

[node name="BattleScene" type="Node2D"]
script = ExtResource("1_12f34")

[node name="UI" type="CanvasLayer" parent="."]

[node name="Background" type="ColorRect" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0
color = Color(0.14, 0.14, 0.14, 0.698039)

[node name="PlayerPanel" type="HBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerPortrait" type="TextureRect" parent="UI/PlayerPanel"]
layout_mode = 2

[node name="PlayerStats" type="VBoxContainer" parent="UI/PlayerPanel"]
layout_mode = 2
tooltip_text = "Label"

[node name="PlayerName" type="Label" parent="UI/PlayerPanel/PlayerStats"]
layout_mode = 2

[node name="PlayerHP" type="ProgressBar" parent="UI/PlayerPanel/PlayerStats"]
layout_mode = 2

[node name="PlayerSync" type="Label" parent="UI/PlayerPanel/PlayerStats"]
layout_mode = 2

[node name="EnemyPanel" type="HBoxContainer" parent="UI"]
offset_bottom = 40.0

[node name="EnemyPortrait" type="TextureRect" parent="UI/EnemyPanel"]
layout_mode = 2

[node name="EnemyStats" type="VBoxContainer" parent="UI/EnemyPanel"]
layout_mode = 2
tooltip_text = "Label"

[node name="EnemyName" type="Label" parent="UI/EnemyPanel/EnemyStats"]
layout_mode = 2

[node name="EnemyHP" type="ProgressBar" parent="UI/EnemyPanel/EnemyStats"]
layout_mode = 2

[node name="ActionsPanel" type="VBoxContainer" parent="UI"]
offset_right = 40.0
offset_bottom = 40.0

[node name="AttackButton" type="Button" parent="UI/ActionsPanel"]
layout_mode = 2
text = "Атака"

[node name="DefendButton" type="Button" parent="UI/ActionsPanel"]
layout_mode = 2
text = "Защита"

[node name="PersuadeButton" type="Button" parent="UI/ActionsPanel"]
layout_mode = 2
text = "Убедить"

[node name="ForceButton" type="Button" parent="UI/ActionsPanel"]
layout_mode = 2

[node name="Units" type="Node2D" parent="."]
